--- a/src/App.css
+++ b/src/App.css
@@ -2,15 +2,23 @@
   text-align: center;
 }
 
+
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
 }
-
+a{
+  margin-right: 5px;
+}
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
+}
+
+.strike{
+  text-decoration: line-through;
 }
 
 .App-header {
